--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <body>
     <h1>Hello World</h1>
     <p>I'm hosted with GitHub Pages.</p>
+    <p>This is the start of a sweet journey</p>
 </body>
 
 </html>
