Add page to index

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 
 <body>
+    <div>
+        <a href="/nextgis.html"></a>
+    </div>
     <h1>Hello World</h1>
     <p>I'm hosted with GitHub Pages.</p>
     <p>This is the start of a sweet journey</p>
