--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <body>
     <div>
-        <a href="/nextgis.html"></a>
+        <a href="/nextgis.html">dynamic staff</a>
     </div>
     <h1>Hello World</h1>
     <p>I'm hosted with GitHub Pages.</p>
